--- a/_posts/2021-05-17-static.md
+++ b/_posts/2021-05-17-static.md
@@ -11,4 +11,6 @@ article_header:
 메모리에 할당된다는것은 적절히 사용하지않으면 한정적인 메모리를 효율적으로 사용하지 못하게 됩니다. 
 효율적으로 사용하기위해서는 우선 JVM의 구성과 특징에 대해 이해 해야합니다.
 
+class 는 Static 영역에 생성되고,
+
 <!--more-->
