--- a/_posts/2021-05-17-static.md
+++ b/_posts/2021-05-17-static.md
@@ -7,10 +7,18 @@ article_header:
     src: /screenshot.jpg
 ---
 
-**Static**은 메모리에 한번 할당되면 프로그램이 종료될 때까지 사라지지 않는 것이라고 알고 있습니다. 
-메모리에 할당된다는것은 적절히 사용하지않으면 한정적인 메모리를 효율적으로 사용하지 못하게 됩니다. 
-효율적으로 사용하기위해서는 우선 JVM의 구성과 특징에 대해 이해 해야합니다.
+**Static**은 메모리에 한번 할당되면 프로그램이 종료될 때까지 사라지지 않는 것이라고 알고 있다.<br>
+메모리에 할당된다는것은 적절히 사용하지않으면 한정적인 메모리를 효율적으로 사용하지 못하게 된다.<br>
+그럼 Static은 어디에 저장이 될까?<br>
 
-class 는 Static 영역에 생성되고,
+우선 jvm에는 Runtime data area 공간이 있고 이 공간안에서도 몇가지 종류로 나누어진다.
+- Method Area(=class Area) 
+- Heap Area
+- Stack Area
+- PC Register
+- Native Method Stack
+
+static은 Method Area에 할당되며 시점은 프로그램 실행시 클래스가 메모리상에 올라갈때이다.<br>
+그리고 static이 붙으면 클래스 변수라고 하는이유는 클래스가 존재하는 위치와 같기 때문이다.   
 
 <!--more-->
