--- a/_posts/2021-10-26-DIP.md
+++ b/_posts/2021-10-26-DIP.md
@@ -7,14 +7,142 @@ article_header:
     src: /screenshot.jpg
 ---
 
-**DIP(Dependency Inversion Princple)**의 가장 중요한점은 단순히 인터페이스와 구현 클래스를 분리 하는정도가 아니라!
-고수준 모듈이 저수준 모듈에 의존하지 않도록이다.
+# DIP(Dependency Inversion Princple) 
+
+DIP의 가장 중요한점은 단순히 인터페이스와 구현 클래스를 분리 하는정도가 아니라!<br>
+고수준 모듈이 저수준 모듈에 의존하지 않도록이다.<br>
 DIP를 사용할때 하위기능을 추상화한 인터페이스는 고수준 모듈의 관점에서 도출한다.
 
-첫째, 상위 모듈은 하위 모듈에 의존해서는 안된다. 상위 모듈과 하위 모듈 모두 추상화에 의존해야 한다.
+첫째, 상위 모듈은 하위 모듈에 의존해서는 안된다. 상위 모듈과 하위 모듈 모두 추상화에 의존해야 한다.<br>
 둘째, 추상화는 세부 사항에 의존해서는 안된다. 세부사항이 추상화에 의존해야 한다.
 
 의존관계 역전 원칙은 소프트웨어 모듈들을 분리하는 특정 형식을 지칭한다
 
 고수준 모듈이 저수준 모듈에 의존해있으면 구현을 교체해야할때 작업해야할게 많아 어려워 질수도 있다.
 그리고 저수준 모듈이 제대로 작동하는등 구현이 되있어야 테스트할수있는 단점이 생긴다.
+
+Before
+===
+
+여기서 Season 이라는 고수준 모듈이 저수준 모듈인 ClimateOfSeoul, ClimateOfHawaii 에 의존하고 있는 상태이다.
+
+##### 변경전 문제점
+1. Season만 테스트 하기 어렵다. 테스트 하려면 ClimateOfSeoul, ClimateOfHawaii가 완벽하게 동작해야 한다.
+2. 구현 방식을 변경하기 어렵다. 만약 다른 도시들이 추가 된다면 case 를 추가해야 하며 추가되는 조건이 많을수록 가독성이 어렵고 실수가 많아질수 있는 코드가 된다.
+
+```java
+//계절
+public class Season {
+
+    //도시별 날씨
+    private ClimateOfSeoul climateOfSeoul;
+    private ClimateOfHawaii climateOfHawaii;
+
+    public String getClimateOfCity(String cityName) {
+        switch (cityName) {
+            case "Seoul":
+                return climateOfSeoul.season();
+            case "Hawaii":
+                return climateOfHawaii.season();
+            default:
+                throw new NullPointerException();
+        }
+    }
+}
+```
+
+```java
+//서울 날씨
+public class ClimateOfSeoul {
+    public String season() {
+        return "Autumn";
+    }
+}
+```
+
+```java
+//하와이 날씨
+public class ClimateOfHawaii {
+    public String season() {
+        return "Winter";
+    }
+}
+```
+
+After
+===   
+
+##### 변경후 달라진 점
+1. 변경후 확인해야할 사항은 Season 클래스는 ClimateOfSeoul, ClimateOfHawaii 에 의존하지 않는다.<br> ClimateOfCity(인터페이스)에 의존할 뿐이다.
+2. ClimateOfCity는 고수준 모듈이고 저수준 모듈인 ClimateOfSeoul, ClimateOfHawaii는 ClimateOfCity에 의존하게 된다. 이와 같이 고수준 모듈이 저수준 모듈을 사용하려면 고수준 -> 저수준 에 의존해야하는데 반대로 저수준 모듈이 고수준 모듈에 의존하게되므로 이를 Dependency Inversion Principle, 의존 역전 원칙 이라고 한다.
+3. 더 이상 Season 클래스가 저수준 모듈에 의존하지 않으므로 저수준 모듈이 구현되기 전 이라도 테스트를 할수있다. ClimateOfCity는 인터페이스이므로 대용 객체(Mock) 를 사용해서 테스트를 진행 할수 있다.
+
+```java
+//고수준 모듈
+public interface ClimateOfCity {
+    String season();
+}
+```
+
+```java
+//저수준 모듈
+//서울 날씨
+public class ClimateOfSeoul implements ClimateOfCity {
+    public String season() {
+        return "Autumn";
+    }
+}
+```
+
+```java
+//저수준 모듈 
+//하와이 날씨
+public class ClimateOfHawaii implements ClimateOfCity{
+    public String season() {
+        return "Winter";
+    }
+}
+```
+
+```java
+// 계절
+public class Season {
+
+    //도시별 날씨
+    private final ClimateOfCity climateOfCity;
+
+    public Season(ClimateOfCity climateOfCity) {
+        this.climateOfCity = climateOfCity;
+    }
+
+    public String getClimateOfCity() {
+        return climateOfCity.season();
+    }
+}
+```
+
+```java
+class SeasonTest {
+
+    @Test
+    void 서울_계절() {
+        ClimateOfSeoul climateOfSeoul = new ClimateOfSeoul();
+        Season season = new Season(climateOfSeoul);
+
+        assertEquals(season.getClimateOfCity(),"Autumn", "Fail Message");
+    }
+
+    @Test
+    void 하와이_계절() {
+        ClimateOfHawaii climateOfHawaii = new ClimateOfHawaii();
+        Season season = new Season(climateOfHawaii);
+
+        assertEquals(season.getClimateOfCity(), "Winter", "Fail Message");
+    }
+}
+```
+
+
+**참고**
+
+[DDD START!](http://www.yes24.com/Product/Goods/27750871)
