--- a/_posts/2021-11-08-Redis.md
+++ b/_posts/2021-11-08-Redis.md
@@ -15,7 +15,7 @@ article_header:
 
 미래에 요청할 데이터의 대해 미리 저장해두었다가 필요할때 빠르게 제공 해주는것을 의미한다.<br>
 예를들어 어떤 복잡한 연산을 계속 요청할 경우 현재 부하가 걸리지 않으나 나중에 요청이 몰리면 부하가 올수있다<br>
-이럴 경우 한번 연산한 데이터를 Cache의 저장 하고 사용하면 요청이 몰리시 부하를 줄일수 있다.      
+이럴 경우 한번 연산한 데이터를 Cache의 저장 하고 사용하면 요청이 몰리시 부하를 줄일수 있다.<br>
 
 ---	
 
@@ -86,3 +86,69 @@ Packet 을 tcp에서 끊어서 올수있어서 packet들이 들어오면 Process
 -> 예를들어 keys 멸령어, was elasticCache는 이미 하고 있음 
 전체 장애의 90% 이상이 keys와 save 성정을 사용해서 발생
 (save설정이란 1분안에 key가 만개가 변경되면 dump하라는 설정)
+
+## Redis 데이터 분산 
+
+#### 데이터 분산 방법
+1. Application
+- Consistent Hashing
+-> twemproxy를 사용하는 방법으로 쉽게 사용 가능 <br>
+(*twemproxy : 프로토콜을 위한 빠르고 가벼운 프록시입니다 . 주로 백엔드의 캐싱 서버에 대한 연결 수를 줄이기 위해 구축되었습니다. )
+2. Sharding
+
+--- 
+
+## Redis Cluster
+- Hash 기반으로 Slot 16384 로 구분 
+- 자기 슬롯이 속한 레디스 클러스터 서버로 가는게 키 알고리즘. (CRC16)
+- Slot = crc16(key) % 16384  
+->(* key에 CRC16알고리즘에 나온 으로 slot으로 해당 서버를 찾아간다. 최대 16384를 넘을수 없다.)
+- Key가 Key{hashkey} 패턴이면 실제 crc16에 hashkey가 사용된다.
+-> Key가 아닌 {hashkey}를 crc16을 사용해 해당하는 slot으로 서버가 정해진다.
+- 특정 Redis 서버는 이 slot range를 가지고 있고, 데이터 migration은 이 slot 단위의 데이터를 다른 서버로 전달하게 된다.(migrateCommand 이용)
+
+##### 장점
+- 자체적인 Primary, Secondary Failover
+- Slot 단위의 데이터 관리
+##### 단점
+- 메모리 사용량이 더 많음
+- Migration(Slot range 수정 등) 자체는 관리자가 시점을 결점해야 함
+- Library 구현이 필요함
+
+
+## Redis Failover
+##### Coordinator 기반
+- Zookeeper, etcd, consul 등의 Coordinator 사용
+- 해당 기능을 이용하도록 개발이 필요
+##### VIP 기반 
+- 가상ip 할당 
+- 해당 가상ip 로만 접속
+- A 서버가 죽으면 B서버에 해당 가상IP 할당
+##### DNS 기반 
+- 가상 도메인 할당
+- A 서버에 도메인 할당
+- A 서버가 죽으면 B서버에 가상 도메인 할당
+##### VIP/DNS 기반
+
+- 공통으로 클라이언트에 추가적인 구현이 필요없다.
+1. VIP
+- VIP기반은 외부로 서비스를 제공해야 하는 서비스 업자에 유리(ex. 클라우드 업체)
+2. DNS
+- DNS 기반은 DNS Cache TTL을 관리해야 함.
+- 사용하는 언어별  DNS 캐싱 정책이을 잘 알아야 함
+-> Java같은 경우 default 30초 에 따라 캐싱을 가지면 DNS를 변경하면 30초간 접속이 불가할수있다. 이런 캐싱 정책에 따라 정책을 잘아야한다. <br>
+그래서 VIP를 기반으로하면 무조건 변경되기 때문에 외부에 서비스 제공해주는 업체는 VIP기반으로하는게 안정적이다.
+- 툴에 따라서 한번 가져온 DNS 정보를 다시 호출 하지 않는 경우도 존재
+
+
+## 모니터링
+1. RSS 피지컬 메모리를 얼마나 사용하는지 확인해야한다.
+2. Used Memory는 얼마나 메모리를 쓰고있는지 확인해야한다.
+3. Connection 수에따라 연결이 끊길수도 있다.
+4. 초당 처리 요청 수 이게 많을경우 CPU에 영향을 받는다.
+
+## Redis를 Persistent Store로 이용할 경우
+- 무조건 Primary/Secondary 구조로 구성한다.
+- 메모리 넉넉해야 한다.
+- migration 정기적으로 해야한다.
+- RDB/AOF가 필요하면 Secondary에서만 사용한다.
