--- a/_posts/2021-10-26-DIP.md
+++ b/_posts/2021-10-26-DIP.md
@@ -1,6 +1,6 @@
 ---
 title: "[Java] 의존관계 역전 원칙 (Dependency inversion principle)"
-tags: Java
+tags: Java DDDSTART!
 article_header:
   type: cover
   image:
